Adding all SVM notebooks

--- a/notebooks/SVM_landuse.ipynb
+++ b/notebooks/SVM_landuse.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -25,10 +25,13 @@
     "from sklearn import svm\n",
     "from sklearn.grid_search import GridSearchCV\n",
     "from sklearn import preprocessing\n",
+    "from sklearn import metrics\n",
+    "\n",
     "import math\n",
     "import warnings\n",
     "import os\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
@@ -38,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -114,6 +117,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 0.67655596,  0.36495177,  0.05789284,  0.01342282]),\n",
+       " array([ 0.83797918,  0.12473898,  0.11607787,  0.00492005]),\n",
+       " array([ 0.74866511,  0.18592841,  0.07725528,  0.00720072]),\n",
+       " array([21417,  9099,  1387,   813]))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.precision_recall_fscore_support(y_test, linear_y_pred, labels = [0,1,2,3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 0.67655596,  0.36238263,  0.05789284,  0.        ]),\n",
+       " array([ 0.83797918,  0.1357292 ,  0.11607787,  0.        ]),\n",
+       " array([ 0.74866511,  0.19748941,  0.07725528,  0.        ]),\n",
+       " array([21417,  9099,  1387,   813]))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.precision_recall_fscore_support(y_test, rbf_low_y_pred, labels = [0,1,2,3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "collapsed": false,
@@ -142,7 +195,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 3, 1, 2])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.unique(rbf_y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -169,11 +244,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.unique(rbf_low_y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 0.67655596,  0.36238263,  0.05789284,  0.        ]),\n",
+       " array([ 0.83797918,  0.1357292 ,  0.11607787,  0.        ]),\n",
+       " array([ 0.74866511,  0.19748941,  0.07725528,  0.        ]),\n",
+       " array([21417,  9099,  1387,   813]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.precision_recall_fscore_support(y_test, rbf_low_y_pred, labels = [0,1,2,3])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Section 1 : Prediction using flags\n",
+    "    - is_loud\n",
+    "    - is_dark\n",
+    "    - is_bump\n",
+    "\n",
+    "### Linear Kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we successfully(OS) predict the 61.1382809634 percent of data using a rbf kernel\n"
+     ]
+    }
+   ],
    "source": [
     "# RBF kernel with gamma = 0.5\n",
     "bool_rbf_high_clf = OneVsRestClassifier(svm.SVC(kernel='rbf', C=1.0, gamma = 0.5, class_weight='balanced'))\n",
@@ -189,11 +331,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we successfully(OS) predict the 53.1116273383 percent of data using a poly kernel\n"
+     ]
+    }
+   ],
    "source": [
     "bool_poly_clf = OneVsRestClassifier(svm.SVC(kernel='poly', C=1.0, class_weight='balanced'))\n",
     "bool_poly_clf.fit(x_predictors_train, y_train)\n",
@@ -454,40 +604,6 @@
    "outputs": [],
    "source": [
     "os.system('say \"tuning parameters done\"');"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "np.logspace(-9, 3, 13)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "np.linspace?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4],\n",
-    "                     'C': [1, 10, 100, 1000]},"
    ]
   }
  ],
