--- a/notebooks/SVM_landuse.ipynb
+++ b/notebooks/SVM_landuse.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "# Support Vector Machines\n",
     "\n",
-    "Use SVM to seperate the predict land use type"
+    "SVM to predict land use type based on sensor data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -105,15 +105,6 @@
     "print \"we successfully(OS) predict the {} percent of data using a linear kernel\".format((right)*100)\n",
     "os.system('say \"First Linear Done\"');"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -609,9 +600,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Plume Conda",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "plume_conda"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -623,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.7rc1"
   }
  },
  "nbformat": 4,
